# listening-monster

./: .env  .gitignore  README.md  app.py  long_audio.py  pyproject.toml  requirements.txt  temp  utils.py
.github/workflows/: python-app.yml
instance/: app.sqlite
migrations/versions/: 6f3427a17434_change_length_datatype.py  84abca9608bb_add_decorator_for_date_added_and_last_.py  935221c83ab7_add_length_prop_to_audio.py  f6183bf1ef2b_add_uid_to_audio_records.py
samples/mpeg/: sample01.mpeg
server/: app.py
source/engine/: __init__.py  utils.py
source/engine/transcriber/: transcriber.py
source/server/: __init__.py  app.py  config.py  db.py  schema.sql  utils.py
source/server/models/: __init__.py  user.py
source/server/routes/: audio.py  auth.py  index.py  upload.py  utils.py
source/server/templates/: base.html  index.html  readme.md  upload.html
source/server/templates/components/: audio.html  button.html  confirm-details.html  input.html
source/server/templates/components/audio/: audio-upload.html  play-audio.html  upload_audio.html
source/server/templates/pages/: auth.html  index.html  login.html
source/server/templates/sections/: audio-player.html  audio-upload.html  confirm-details.html  left-nav.html  login.html  register.html  right-nav.html  upload.html
src/: transcriber.py  utils.py
src/Transcriber/: transcriber.py
src/engine/: transcriber.py
src/tools/: audio_splitter.py  logger.py
tests/: app_audio.test.py  test_long_audio.py  test_server.py  test_template_rules.py
